# creativai

./: .gitignore  README.md  main.py  pyproject.toml
eval/: __init__.py  conflict_and_stakes_judge.py  consistency_verification_judge.py  five_second_judge.py  flesch_reading_ease.py  initial_impression_judge.py  judge_text.py  length_judge.py  llm_judge_prompts.json  main.py  motivation_consistency_judge.py  reference.txt  setting_judge.py  surprise.py  text_llm_judge.py
eval/results/: bad_run1_results_tony.json  bad_run_1.json  bad_samples_results.json  good_run1_results_tony.json  good_samples_results.json  sample_run.json  test_run_1.json
generators/: one_shot_v0.py  richy.ipynb  tony.ipynb  tony_script.py
generators/tony/: s10_1400_newpost1_0.7.txt  s10_1400_newpost2_0.7.txt  s11_7300_newpost1_0.6.txt  s11_7300_newpost2_0.7.txt  s12_6700_newpost1_1.0.txt  s12_6700_newpost2_1.0.txt  s1_18000_newpost1_0.9.txt  s1_18000_newpost2_0.9.txt  s2_16000_newpost1_0.8.txt  s2_16000_newpost2_0.9.txt  s3_3100_newpost1_0.9.txt  s3_3100_newpost2_0.7.txt  s4_3000_newpost1_0.9.txt  s4_3000_newpost2_0.8.txt  s5_7400_newpost1_1.0.txt  s5_7400_newpost2_1.0.txt  s6_7000_newpost1_0.9.txt  (+6 more)
tests/: README.md  __init__.py  conftest.py  test_cli.sh  test_consistency_verification_judge.py  test_initial_impression_judge.py  test_main_integration.py  test_setting_judge.py  test_setting_judge_integration.py  test_text_llm_judge.py
texts/: README.md  compelling_hook.txt  setting_complete.txt  setting_misleading.txt  setting_unclear.txt  weak_hook.txt
util/: __init__.py  openai_runner.py
(+24 files in other folders)
