[project]
name = "creativai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=7.1.0",
    "pip>=25.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
